--- a/awwwards/templates/design.html
+++ b/awwwards/templates/design.html
@@ -9,7 +9,7 @@
         <div class="col-md-8 col-sm-10 col-xs-12">
             <div class="card">
                 <img class="img-responsive" src="{{project.image.url}}" style="width:400px;height:400px;"><br>
-                <form style="border:white" action="/ratecontent/{{project.id}}" method="post" enctype="multipart/form-data">
+                <form style="border:white" action="/ratedesign/{{project.id}}" method="post" enctype="multipart/form-data">
                     {%csrf_token%}
                     {% bootstrap_form form%}
                     <input type="submit" class="btn btn-primary btn-sm" value="Post">
@@ -17,7 +17,7 @@
             </div>
             <!-- Ratings section that displays the rates -->
             <h2 class="text-center com">Ratings</h2><br>
-            {% for rate in rates %}
+            {% for rate in rato %}
             <img class="post2" src="{{rate.user.profile.profile_photo.url}}"><strong>{{rate.user.username}}</strong></p>
             <br>
             <p class="ment">{{rate.rating}}</p>
