--- a/awwwards/templates/index.html
+++ b/awwwards/templates/index.html
@@ -3,39 +3,7 @@
 {% load static %}
 {% block content %}
 {{block.super}}
-<div class="container">
 
-<div id="demo" class="carousel slide" data-ride="carousel">
-
-        <!-- Indicators -->
-        <ul class="carousel-indicators">
-          <li data-target="#demo" data-slide-to="0" class="active"></li>
-          <li data-target="#demo" data-slide-to="1"></li>
-          <li data-target="#demo" data-slide-to="2"></li>
-        </ul>
-        
-        <!-- The slideshow -->
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="media/images/25.jpg" alt="Los Angeles" width="1100" height="400">
-          </div>
-          <div class="carousel-item">
-            <img src="media/images/grill.jpg" alt="Chicago" width="1100" height="400">
-          </div>
-          <div class="carousel-item">
-            <img src="media/images/impossible.jpg" alt="New York" width="1100" height="400">
-          </div>
-        </div>
-        
-        <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#demo" data-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#demo" data-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </a>
-      </div>
-</div>
       
 <div class="container">
         <div class="row">
@@ -44,8 +12,7 @@
  <br><br>
  
  <div class="card img-fluid" style="width:500px;">
- <img src="{{project.image.url}}" class="card img-fluid" alt="image" style="width:500px;height:600px ;">
- <div class="card-img-overlay">
+ <img src="{{project.image.url}}" class="card img-fluid" alt="image" style="width:500px;height:500px">
  <a href="{% url 'ratecontent' project.id %}" class="btn btn-outline-info btn-sm">Rate Content</a>
  <a href="{% url 'ratedesign' project.id %}" class="btn btn-outline-info btn-sm">Rate Design </a>
  <a href="{% url 'rateusability' project.id %}" class="btn btn-outline-info btn-sm">Rate Usability</a>
@@ -62,10 +29,3 @@
 
 </div>
 {% endblock %}
-<style>
-.carousel-inner img {
-      width: 100%;
-      height: 100%;
-  }
- 
-</style>
