--- a/awwwards/templates/profile.html
+++ b/awwwards/templates/profile.html
@@ -4,36 +4,66 @@
 {% block content %}
 {{block.super}}
 
-<div class="container">
-        <div clas="row">
-          <div class="col-md-6">
-            <img  src="{{profile.profile_photo.url}}"
-            class="img-circle"  style=" width:300px ;height:300px;">
-          </div>
-          <div class="col-md-6">
-            <h2>{{user.username}}</h2>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+
+<body>
+
+    <body>
+        <div style="margin-top:30px;" class="container">
+            <div clas="row">
+                <div class="col-md-3 col-sm-2 col-lg-2"></div>
+                <div class="col-md-3 col-xs-6 col-sm-4 col-lg-3">
+                   
+                    <img src="{{profile.profile_pic.url}}" class="img-circle" alt="Image" style="height: 250px; width:250px;">
+                       
+                </div>
+                <div class="col-md-3 col-sm-3 col-xs-6 col-lg-5">
+                    <h3>{{user.username}}</h3>
+                    {% for img in profile %}
+                    
+                    <p>{{img.bio }}</p>
+
+                    
+                    {% empty %}
+                    {% endfor %}
+
+                   
+                   
+                    
+                </div>
+                <div class="col-md-3 col-sm-3 col-lg-2"></div>
+            </div>
+           
+        </div>
+        <div class="container">
             <hr>
-            <p>{{profile.bio }}</p>
-          </div>
+            <h4 class="text-center">Projects</h4>
+            <hr>
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                {% for image in images %}
+                <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4 ">
+                    <img style="margin:13px;height:200px;width:200px;" src="{{image.image.url}}" class="img-responsive"
+                        alt="Image">
+                </div>
+                {% endfor %}
+
+                </a>
+            </div>
+            <div class="col-md-2"></div>
         </div>
-        <hr>
-      </div>
-      <div class="container">
-        <hr>
-        <h4 class="text-center">Projects</h4>
-        <hr>
-        <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          {% for image in images %}
-          <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4 ">
-            <img style="margin:13px;height:200px;width:200px;" src="{{image.image.url}}" class="img-responsive"
-              alt="Image">
-          </div>
-          {% endfor %}
-         
-        </div>
-        <div class="col-md-2"></div>
-      </div>
-      </div>
-{%endblock%}
+    </body>
+    {% endblock %}
+
+</body>
+
+</html>
+
