--- a/awwwards/templates/navbar.html
+++ b/awwwards/templates/navbar.html
@@ -18,7 +18,7 @@
                 <a class="nav-link" href="#">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Change password</a>
+                <a class="nav-link" href="/accounts/password/change">Change password</a>
             </li>
          
         </ul>
