added font-style to search html

--- a/awwwards/templates/navbar.html
+++ b/awwwards/templates/navbar.html
@@ -21,12 +21,18 @@
                 <a class="nav-link" href="/accounts/password/change">Change password</a>
             </li>
          
-        </ul>
-        <div class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <form class="navbar-form" role="search" action="{% url 'search_results' %}">
-                <input type="text" name="search" placeholder="Search.." id="input">
-            </form>
-        </div>
+            
+            <ul class="nav navbar-nav navbar-logo mx-auto">
+                <li class="nav-item">
+                    <form class="navbar-form" role="search" action="{% url 'search' %}">
+                        <div class="input-group">
+                          <input type="text" class="form-control" placeholder="Search" name="profile">
+                          <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                          </div>
+                    </form>
+                </li>
+            </ul>
         {%endif%}
 
     </nav>
