--- a/awwwards/templates/navbar.html
+++ b/awwwards/templates/navbar.html
@@ -1,42 +1,114 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container">
+
+</div>
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>Alphtach | Home</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-        {%if user.is_authenticated%}
-        <a class="navbar-brand" href="{% url 'homePage'%}">Home</a>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{%url 'upload'%}">Project submission</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/accounts/password/change">Change password</a>
-            </li>
-         
-            
-            <ul class="nav navbar-nav navbar-logo mx-auto">
-                <li class="nav-item">
-                    <form class="navbar-form" role="search" action="{% url 'search' %}">
-                        <div class="input-group">
-                          <input type="text" class="form-control" placeholder="Search" name="profile">
-                          <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                          </div>
-                    </form>
-                </li>
-            </ul>
-        {%endif%}
 
-    </nav>
+    <header>
+        <!-- ======================================Navigation Bar================================================= -->
+        <nav class="navbar navbar-expand-lg navStyle">
+            <a class="brand-navbar" href="{% url 'homePage'%}"><img
+                    src="https://images.pexels.com/photos/247431/pexels-photo-247431.jpeg?cs=srgb&dl=animal-photography-daylight-elephant-247431.jpg&fm=jpg"
+                    alt="Responsive image" height="60px"></a>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#mainMenu">
+                <span><i class="fas fa-align-right iconStyle"></i></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainMenu">
+                <ul class="navbar-nav ml-auto navList">
+                    <li class="nav-item active"><a href="{% url 'homePage'%}" class="nav-link"><i
+                                class="fas fa-home"></i>HOME<span class="sr-only">(current)</span></a></li>
+                    <li class="nav-item">
+                        <a href="{%url 'upload'%}" class="nav-link"><i class="fas fa-cogs"></i>Project submission</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/accounts/password/change" class="nav-link"><i class="fas fa-briefcase"></i>Change
+                            password</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="{%url 'profile' user.id%}" class="nav-link"><i class="fas fa-users"></i>Profile</a>
+                    </li>
+                </ul>
+                <form class="navbar-form my-2 my-lg-0" role="search" action="{% url 'search' %}" >
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" name="profile">
+                        <div class="input-group-btn">
+
+                        </div>
+                </form>
+            </div>
+        </nav>
+
+        <!-- ======================================carousel================================================= -->
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100"
+                        src="https://images.pexels.com/photos/132037/pexels-photo-132037.jpeg?cs=srgb&dl=beach-blur-boardwalk-132037.jpg&fm=jpg"
+                        role="listbox">
+
+                    <div class="carousel-caption">
+
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100"
+                        src="https://images.pexels.com/photos/39811/pexels-photo-39811.jpeg?cs=srgb&dl=forest-haze-hd-wallpaper-39811.jpg&fm=jpg"
+                        alt="..." role="listbox">
+                    <div class="carousel-caption">
+
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100"
+                        src="https://images.pexels.com/photos/247431/pexels-photo-247431.jpeg?cs=srgb&dl=animal-photography-daylight-elephant-247431.jpg&fm=jpg"
+                        alt="..." role="listbox">
+                    <div class="carousel-caption">
+
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control" aria-hidden="true"><i class="fas fa-long-arrow-alt-left"></i></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control" aria-hidden="true"><i class="fas fa-long-arrow-alt-right"></i></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+
+
+    </header>
 
 </body>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </html>
